chore: 更新 protobuf 版本并调整 gitignore
- 将 protobuf 版本从 .7z 文件名中移除，统一命名格式
- 更新 .gitignore 文件，修正 protobuf 目录的忽略规则
- 更新 components/union 子模块的提交哈希

--- a/.gitignore
+++ b/.gitignore
@@ -111,6 +111,6 @@ build/
 output/*
 .vscode/
 config/ProductConfig.json
-components/protobuf/
+components/protobuf*/
 components/ssl/
 components/ftd2xx_static/
