refactor(AScan): 优化 AScanInteractor 中的 gate 相关操作
- 将 target_link_libraries 的 PRIVATE 修改为 PUBLIC，影响库的链接方式
- 更新 UnionLib 子模块的提交哈希值
- 修改 AScanInteractor 中的 gate 相关函数，使用成员函数调用代替直接访问属性
- 优化 gateList 的构建过程，使用成员函数调用以提高代码可读性和安全性

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,7 +125,7 @@ find_package(Morose)
 
 target_link_libraries(
     ${PROJECT_NAME}
-    PRIVATE
+    PUBLIC
     UnionLib
     SingleApplication::SingleApplication
 )
